tests/inputs/valid/map-03.js
const map = [
    ['@','-','-','-','A','-','-','-','+'],
    ['','','','','','','','','|'],
    ['x','-','B','-','+','','','','|'],
    ['','','','','|','','','','|'],
    ['','','','','+','-','-','-','C']
];
module.exports = map;

