tests/inputs/invalid/map-09.js
const map = [['@','-','A','-','+','-','B','-','x']];